unpackaged/main/default/objects/asp04__Service_Handlers__mdt/asp04__Service_Handlers__mdt.object-meta.xml
<CustomObject>
    <label>Service Handler</label>
    <pluralLabel>Service Handlers</pluralLabel>
</CustomObject>