unpackaged/main/default/objects/asp04__Service_Handlers__mdt/fields/asp04__Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>asp04__Handler_Name__c</fullName>
    <description>The name of the class which should handle the service requests</description>
    <inlineHelpText>The name of the class which should handle the service requests</inlineHelpText>
    <label>Handler Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>