unpackaged/main/default/objects/asp04__Service_Handlers__mdt/fields/asp04__Handler_NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>asp04__Handler_NamespacePrefix__c</fullName>
    <inlineHelpText>The Namespace Prefix that applies to the actual handler class. Leave this blank to indicate that none applies.</inlineHelpText>
    <label>Handler Namespace Prefix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>