unpackaged/main/default/objects/asp04__Service_Handlers__mdt/fields/asp04__Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>asp04__Interface_Name__c</fullName>
    <description>The name of the interface which is implemented in order to handle this service request</description>
    <inlineHelpText>The name of the interface which is implemented in order to handle this service request</inlineHelpText>
    <label>Interface Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>